<resources>
    <string name="app_name">Quizz</string>
    <string name="todo">TODO</string>
    <string name="asj_quiz_app">Quizz</string>
    <string name="start">Start</string>
    <string name="points">Points : 0</string>
    <string name="question_number">Question Number :</string>
    <string name="question">Question</string>
    <string name="radiobutton1">RadioButton</string>
    <string name="radiobutton2">RadioButton</string>
    <string name="radiobutton3">RadioButton</string>
    <string name="radiobutton4">RadioButton</string>
    <string name="submit">Submit</string>
    <string name="you_scored">You Scored</string>
    <string name="_50_50">50/50</string>
    <string name="developed_by_gdsc_mce">Developed by Siby C.R.</string>
    <string name="back_to_home">Back to Home</string>
    <string name="please_select_an_option">Please select an option!</string>
</resources>